--- a/styles/globals.css
+++ b/styles/globals.css
@@ -52,7 +52,7 @@ table.basic thead tr td {
     @apply text-sm text-primary uppercase border-b border-gray-700 px-4 py-2;
 }
 
-table.basic tr td th {
+table.basic tr td {
     @apply px-4 py-1 text-white;
 }
 th {
